
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int exit (int) ;
 int fflush (int ) ;
 int printf (char*,char*,int ) ;
 int stderr ;
 int stdout ;
 int strerror (int) ;

void die(char *msg, int err)
{
 printf(err ? "[-] %s: %s\n" : "[-] %s\n", msg, strerror(err));
 fflush(stdout);
 fflush(stderr);
 exit(1);
}
